# C_Language_Refresh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hello_codespace  people.txt
.github/workflows/: ci.yml
src/: grades.c  grades.csv  multiplication.c  sum.c
src/basics/: 02_variables.c  03_control_flow.c  04_functions.c  05_arrays.c  06_pointers.c  07_structs.c  08_file_io.c  hello_codespace.c
